Winter Event R0.5 Maintenance
- Inline with Clarity R22.5

--- a/Clarity Theme/Event Themes/Winter for Dark Mode.css
+++ b/Clarity Theme/Event Themes/Winter for Dark Mode.css
@@ -1,7 +1,7 @@
 /**
  * "Clarity" by Valerio Lyndon
  * Winter Event Modification for Dark Mode
- * Revision 0.4
+ * Revision 0.5
  */
  
  :root {
@@ -21,7 +21,7 @@
 
 .cover-block { background-image: url(https://i.imgur.com/t53PJcs.jpg) !important; }
 
-#cover-image-container {
+#list-container #cover-image-container {
 	position: relative;
 	z-index: 1;
 	
