Light Theme Formatting
More formatting, lol.

--- a/Brink Theme/modThemeLight.css
+++ b/Brink Theme/modThemeLight.css
@@ -1,5 +1,5 @@
 /*------------------------------*\
-        Light Theme V1.0.0
+| - - - Light Theme V1.0.0 - - - |
 \* - - - - - - - - - - - - - - -*/
 
 :root {
