--- a/Brink Theme/Brink.css
+++ b/Brink Theme/Brink.css
@@ -1,11 +1,13 @@
 /* "Brink" by Valerio Lyndon
- * Version 1.1.3
+ * Version 1.2.0
  * 
  * = TABLE OF CONTENTS =
  * 
  * IMPORTS
  * 
- * VARIABLES
+ * VARIABLES-USER
+ * 
+ * VARIABLES-INTERNAL
  * 
  * PAGE-BASE
  * Scrollbars
@@ -66,7 +68,7 @@
 
 
 /*==============================*\
-  !VARIABLES
+  !VARIABLES-USER
 \*------------------------------*/
 
 :root {
@@ -77,10 +79,10 @@
 	 * 
 	 * togglePV / Toggles anime preview video icons.
 	 * valid values: visible / hidden
-	 *  
+	 * 
 	 * bgDimness / Changes dimming of background / Higher = Dimmer.
 	 * min value: 0% / max value: 100%
-	 *  
+	 * 
 	 * imageBrightness(Hov) / Changes lightness of cover images / Higher = Brighter.
 	 * min value: 0% / max value: 100%
 	 */
@@ -91,7 +93,7 @@
 	--imageBrightness: 52%;
 	--imageBrightnessHov: 32%;
 	
-	/* THEME
+	/* THEME COLOURS
 	 * 
 	 * Colours are HSL values but without their surrounding parentheses.
 	 * To get the correct values, simply strip away the surrounding parentheses and blurb.
@@ -122,7 +124,14 @@
 	--paused: 80, 91%, 23%;
 	--dropped: 6, 44%, 46%;
 	--planned: 56, 18%, 56%;
-	
+}
+
+
+/*==============================*\
+  !VARIABLES-INTERNAL
+\*------------------------------*/
+
+:root {
 	/* INTERNALS
 	 * 
 	 * More advanced theme details, used throughout the theme.
@@ -252,6 +261,7 @@ body #fancybox-close,
 	background: hsl(var(--btn)) linear-gradient(45deg, hsl(var(--btn)) 75%, hsl(var(--btnLight)) 0%) !important;
 	border: 2px solid hsl(var(--btn));
 	border-radius: 3px;
+	box-shadow: -0.5px 0.7px 2.1px hsla(0, 0%, 0%, 35%);
 	margin: 0;
 	
 	color: hsl(var(--textBright));
@@ -266,6 +276,16 @@ body #fancybox-close:hover,
 #advanced-options .advanced-options-button a:hover {
 	border-color: hsl(var(--btnAccent));
 	color: hsl(var(--accent));
+}
+
+/* Animations */
+
+@keyframes fade-in {
+	from {
+		opacity: 0;
+	} to {
+		opacity: 1;
+	}
 }
 
 
@@ -699,7 +719,6 @@ body:before {
 .cover-block {
 	position: relative;
 	width: 100%;
-	margin-bottom: 17px;
 }
 
 #cover-image-container {
@@ -782,21 +801,22 @@ body:before {
 
 #status-menu {
 	position: relative;
-	z-index: 150;
 	
 	width: 100%;
 	height: 42px;
 	padding: 0 calc(198px + 0.07 * (100vw - 980px));
 	background: none;
 	border: none;
-	margin: 0 0 3px;
+	margin: 17px 0 3px;
 	pointer-events: none;
-	
-	transition: all var(--timeMenu) var(--bezierFast);
 } #status-menu.fixed {
 	position: fixed;
-	padding-left: 42px;
+	z-index: 150;
+	width: calc(100% - 86px);
+	padding-left: 0;
 	background: hsl(var(--bgAlt));
+	margin: 0 0 0 86px;
+	animation: var(--timeMenu) var(--bezierFast) fade-in;
 	pointer-events: auto;
 }
 
@@ -804,7 +824,7 @@ body:before {
 	position: static;
 	
 	display: flex;
-	height: 100%;
+	height: 42px;
 	min-width: 570px;
 	max-width: 700px;
 	margin: 0 auto;
@@ -870,10 +890,7 @@ body:before {
 	position: absolute;
 	top: 5px;
 	right: 20px;
-	
 	width: calc(169px + 0.07 * (100vw - 980px));
-	
-	transition: all var(--timeMenu) var(--bezierFast);
 } #status-menu.fixed .search-container {
 	right: 12px;
 	width: calc(177px + 0.07 * (100vw - 980px));
@@ -885,7 +902,7 @@ body:before {
 	background: hsl(var(--btn)) linear-gradient(45deg, hsl(var(--btn)) 85%, hsl(var(--btnLight)) 0%);
 	border: 2px solid hsl(var(--btn));
 	border-radius: 3px;
-	box-shadow: -0.5px 0.7px 2.1px hsla(0, 0%, 0%, 50%);
+	box-shadow: -0.5px 0.7px 2.1px hsla(0, 0%, 0%, 35%);
 	margin: 0;
 	
 	transition:
@@ -1014,7 +1031,7 @@ body:before {
 	height: auto;
 	background: hsl(var(--btn));
 	border-radius: 3px;
-	box-shadow: -1.2px 1.68px 3.36px hsla(0, 0%, 0%, 70%);
+	box-shadow: -1.2px 1.68px 3.36px hsla(0, 0%, 0%, 50%);
 	flex-flow: column nowrap;
 	overflow: hidden;
 	
@@ -1082,17 +1099,77 @@ body:before {
   !LIST
 \*------------------------------*/
 
-/* Empty Table Message (Generic/Non-Owner) */
+/* Empty Table Message */
+.list-table[data-items="[]"]:before,
+.list-table[data-items="[]"]:after {
+	content: "";
+	display: block;
+	width: calc(224px * 3);
+	height: 309px;
+	background: hsl(var(--bg)) url(https://i.imgur.com/5G6hsJk.png);
+	background-blend-mode: screen;
+	padding: 48px calc((224px * 1.5) - 90px);
+	margin: 0 auto;
+}
+
+/* No Entries (Generic/Non-Owner) */
 .list-table[data-items="[]"]:after {
 	content: "No entries found.";
+	background:
+		linear-gradient(
+			to right,
+			hsla(var(--bg), 100%),
+			hsla(var(--bg), 0%) 12.5%,
+			hsla(var(--bg), 0%) 87.5%,
+			hsla(var(--bg), 100%)
+		);
+	margin-top: -309px;
 	font-size: 18px;
-	margin: 48px 0;
+	text-align: center;
 } /* No Entries (Owner) */
 [data-owner="1"] .list-table[data-items="[]"]:after {
 	content: "No entries found. Why not add some?";
 } /* No Entries (Bad Search) */
 [data-query*='"s":'] .list-table[data-items="[]"]:after {
 	content: "No entries found. Perhaps your search terms are too restrictive?";
+}
+
+@media (min-width: calc(224px * 5 + 33px)) {
+	.list-table[data-items="[]"]:before,
+	.list-table[data-items="[]"]:after {
+		width: calc(224px * 5);
+		padding: 48px calc((224px * 2.5) - 90px);
+	}
+	
+	.list-table[data-items="[]"]:after {
+		background:
+		linear-gradient(
+			to right,
+			hsla(var(--bg), 100%),
+			hsla(var(--bg), 0%) 20%,
+			hsla(var(--bg), 0%) 80%,
+			hsla(var(--bg), 100%)
+		);
+	}
+}
+
+@media (min-width: calc(224px * 7 + 33px)) {
+	.list-table[data-items="[]"]:before,
+	.list-table[data-items="[]"]:after {
+		width: calc(224px * 7);
+		padding: 48px calc((224px * 3.5) - 90px);
+	}
+	
+	.list-table[data-items="[]"]:after {
+		background:
+		linear-gradient(
+			to right,
+			hsla(var(--bg), 100%),
+			hsla(var(--bg), 0%) 25%,
+			hsla(var(--bg), 0%) 85%,
+			hsla(var(--bg), 100%)
+		);
+	}
 }
 
 
@@ -1230,16 +1307,20 @@ body:before {
 	z-index: -1;	
 	background: hsla(var(--bg), 70%);
 	border-radius: 6px;
-	box-shadow: -1.2px 1.68px 3.36px hsla(0, 0%, 0%, 50%);
+	box-shadow: -1.2px 1.68px 3.36px hsla(0, 0%, 0%, 35%);
 	overflow: hidden;
 	pointer-events: none;
 }
 
 .data.image .link {
-	filter: brightness(var(--imageBrightness)) opacity(var(--imageBrightness));
+	filter:
+		brightness(var(--imageBrightness))
+		opacity(var(--imageBrightness));
 	transition: filter var(--timeItem) var(--bezierFast) !important;
 } .list-item:hover .data.image .link {
-	filter: brightness(var(--imageBrightnessHov)) opacity(var(--imageBrightnessHov));
+	filter:
+		brightness(var(--imageBrightnessHov))
+		opacity(var(--imageBrightnessHov));
 }
 
 .data.image .link:after {
@@ -1828,20 +1909,11 @@ span:nth-of-type(2):after {
 	
 	opacity: 0;
 	transition: all calc(var(--timeItem) * 1.5) var(--bezierFast);
-	animation: var(--timeItem) var(--bezierFast) backwards opacity;
+	animation: var(--timeItem) var(--bezierFast) backwards fade-in;
 	pointer-events: none;
 } .list-item:hover .more-info {
 	opacity: 1;
 }
-
-@keyframes opacity {
-	from {
-		opacity: 0;
-	} to {
-		opacity: 1;
-	}
-}
-
 
 .more-info td,
 .more-info table,
@@ -1959,6 +2031,9 @@ body #fancybox-inner {
 	position: static;
 	width: 100% !important;
 	border-radius: 4px;
+	filter:
+		sepia(20%)
+		invert(91.5%);
 }
 
 #fancybox-outer #fancybox-close {
@@ -2230,16 +2305,6 @@ body #fancybox-inner {
 \*------------------------------*/
 
 @media (max-width: 700px) {
-	/* Headers */
-	#status-menu.fixed .status-button {
-		pointer-events: none;
-		opacity: 0;
-	}
-	
-	#status-menu.fixed .search-container {
-		width: calc(100% - 71px);
-	}
-	
 	/* List Area */
 	.list-block {
 		min-height: calc(100vh - (184px + (700px * 0.3)));
@@ -2263,8 +2328,16 @@ body #fancybox-inner {
 		padding-top: 44px;
 	}
 	
-	#status-menu:not(.fixed) {
+	#status-menu {
+		height: 0;
+		margin-top: 50px;
+	} #status-menu:not(.fixed) {
 		padding: 0;
+	}
+	
+	#status-menu:not(.fixed) .status-menu {
+		position: relative;
+		top: -42px;
 	}
 	
 	#status-menu:not(.fixed) .search-container {
@@ -2272,6 +2345,25 @@ body #fancybox-inner {
 		left: calc(50% - 32px);
 		width: 250px;
 	}
+	
+	#status-menu.fixed .status-button {
+		pointer-events: none;
+		opacity: 0;
+	}
+	
+	#status-menu.fixed .search-container {
+		width: calc(100% - 29px);
+	}
+	
+	.status-menu-container.fixed + div.list-block {
+		margin-top: 53px;
+	}
+	
+	.list-block::before {
+		top: -53px;
+	}
+	
+	/* Buttons */
 	
 	.list-unit .list-status-title {
 		top: 4px;
@@ -2347,7 +2439,7 @@ body #fancybox-inner {
 	background-image: url(https://i.imgur.com/Ly6A4ph.png);
 }
 
-[data-owner=""] .list-unit .loading-space i[style*="block"] {
+[data-owner=""] .list-unit .loading-space i {
 	background-image: url(https://i.imgur.com/1NLFsAe.png);
 }
 
